exo: Fix event dispatch to frame view.

Use TARGET_AND_DESCENDANTS for event targeting policy to ensure
that frame view hit testing works correctly.

Bug: 836177
Test: window frame for xdg surfaces receive events in X11 cros build
Change-Id: I8a9cae6af24253c9611035353ea6120639f7b1c6
Reviewed-on: https://chromium-review.googlesource.com/1025633
Reviewed-by: Mitsuru Oshima <oshima@chromium.org>
Commit-Queue: David Reveman <reveman@chromium.org>
Cr-Commit-Position: refs/heads/master@{#553120}
Former-commit-id: b4662fad465a479ce5fafd0d097533564ed05033